style.css
* {
    box-sizing: border-box;
    margin: 0; 
    padding: 0;
    font-family: 'Black Ops One', 'Josefin Sans', sans-serif;   
}
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #77A6F7;
}
h1 {
    margin: 1rem 0.5rem;
    font-size: 4em;
    color: #FFFFFF;
}
h3 {
    color: navy;
    padding: 10px;
}
h4 {
    margin-top: 15px;
    color: navy;
}
input {
    width: 20vw;
    height: 8vh;
    margin: 1rem;
    text-align: center;
    font-size: 1.2rem;
    border: 2px solid #4673ba;
    color: #01012b;
}
tr {
    display: flex;
    flex-direction: column;
    /* border: 3px dotted orange; */
    font-size: 1rem;
    padding: 1%;
}
th {
    /* border: 3px dotted darkcyan; */
    width: 8vw;
    margin: 1px;
    padding: 1px 10px;
}
table.guessedNumber {
    width: 70vw;
    margin-right: 5%;
    margin-left: 1%;
}
.wrapper {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 10px;
    background-color: #FFFFFF;
    height: vh;
    width: 60vw;
    border-radius: 25px;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
    overflow: hidden;
}
.endingScreen {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #FFFFFF;
    margin: 20px;
    height: 50vh;
    width: 50vw;
    border-radius: 25px;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
    overflow: hidden;
    font-size: 40px;
    gap: 20px;
}
.guessedNumber {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 45vw;
    height: 10vh;
    margin: 5px;
}
.gameOver {
    color: black;
    border: 2px solid orange;
}
.hide {
    display: none;
}
.restart {
    background-color: #4673ba;
    height: 5vh;
    font-size: 1.2rem;
    margin-bottom: 1.2rem;
    color: #FFFFFF;
}
#trophyBox {
    display: flex;
    justify-content: center;    
    margin: 10px;
    border-top: 5px solid #D3E3FC;
    border-bottom: 5px solid #D3E3FC;
    background-color: #FFFFFF;
    width: 40vw;
    height: 60px;
}
#playDashboard {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 2px solid #D3E3FC;
    width: 50vw;
    height: 25vh;
    margin: 10px;
    margin-bottom: 0;
}
#playControlContainer {
    display: flex;
    flex-direction: column;
    background-color: #FFFFFF;
    gap: 10px;
}
#hint {
    background-color: #a4bed4;
    height: 5vh;
    font-size: 1.1rem;
    color: #FFFFFF;
}
#hintList {
    color: #77A6F7;
    font-size: 1.3em;
    text-align: center;
    width: 50vw;
    height: 9vh;
    border: 2px solid #D3E3FC;
    padding: 5px;
    margin-top: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
}
/* Media Query */
@media only screen and (max-width: 750px) {
    * {
        font-size: 10px;
    }
    input::placeholder {
        font-size: 10px;
    }
    .wrapper {
        display: flex;
        align-items: center;
        flex-direction: column;
        margin: 10px;
        background-color: #FFFFFF;
        height: 600px;
        width: 75vw;
        border-radius: 25px;
        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
        overflow: hidden;
    }
    tr {
        display: flex;
        margin: 1px;
        flex-direction: column;
        width: 14vw;
        height: 8vh;
        font-size: small;
    }
    th {
        margin: 2px;
        padding: 1px 10px;
    }
    input {
        width: 35vw;
        height: 5vh;
        margin: 1rem;
        margin-bottom: 0;
        text-align: center;
        font-size: 1.2rem;
        border: 2px solid #4673ba;
        color: #01012b;
    }
    table.guessedNumber {
        padding-right: 4px;
    }
    #trophyBox {
        margin: 1rem;
        border-top: 3px solid #D3E3FC;
        border-bottom: 3px solid #D3E3FC;
        background-color: #FFFFFF;
        width: 40vw;
        height: 50px;
    }
    #hintList {
        color: #77A6F7;
        font-size: 1.1em;
        text-align: center;
        width: 70.5vw;
        height: 9vh;
        border: 2px solid #D3E3FC;
        padding: 5px;
        margin-top: 5px;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    #playDashboard {
        display: flex;
        flex-direction: column;
        align-items: center;
        border: 2px solid #D3E3FC;
        width: 70vw;
        height: 40vh;
        margin: 1rem;
        margin-bottom: 0;
    }
}
@media (orientation: landscape) and (max-width: 600px) {
    .wrapper {
        display: flex;
        align-items: center;
        flex-direction: column;
        margin: 10px;
        background-color: #FFFFFF;
        height: 500px;
        width: 75vw;
        border-radius: 25px;
        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
        overflow: hidden;
        padding-bottom: 10px;
    }
    #hint {
        font-size: 10px;
        height: 5vh;
    }
    .restart {
        font-size: 10px;
        height: 5vh;
    }
}

